# llm_app

./: .gitignore  .pre-commit-config.yaml  Dockerfile-llm-app  Makefile  README.md  docker-compose.yml  login_mask.py  login_mask_simple.py  pytest.ini  requirements.txt  rest_api.py  st_app.py  st_helpers.py
.github/workflows/: llm-app.yaml
examples/: vllm-video-inference.py
fragments/: delme.py
llmlib/: pyproject.toml
llmlib/llmlib/: base_llm.py  bundler.py  bundler_request.py  error_handling.py  gemma.py  gemma3_local.py  gemma3_vllm.py  huggingface_inference.py  internvl.py  io.py  llama_4.py  minicpm.py  mock_model.py  model_registry.py  pixtral_demo.py  qwen2_5.py  replicate_api.py  runtime.py  semantic_similarity.py  vllm_model.py  vllmserver.py  whisper.py
llmlib/llmlib/gemini/: gemini_code.py  media_description.py  video_description.py
llmlib/llmlib/llama3/: README.md  __init__.py  llama3_vision_70b_quantized.py  llama3_vision_8b.py
llmlib/llmlib/openai/: openai_completion.py  openai_transcription.py
llmlib/llmlib/phi3/: phi3.py  phi35.py
llmlib/llmlib/rest_api/: restapi_client.py  restapi_server.py
notebooks/: quantization-inference.py  quantization.ipynb
test-files/: .gitignore  toxicity-prompt.txt
test-files/batch-files/: batch_command.md  batch_input.jsonl
test-files/unittest-batch-gemini/: input.jsonl
tests/: helpers.py  test_bundler.py  test_gemini.py  test_gemma.py  test_gemma3_local.py  test_gemma3_vllm.py  test_huggingface_vlm.py  test_llama3.py  test_minicpm.py  test_model_registry.py  test_openai.py  test_phi_3.py  test_rest_api.py  test_vllm_model.py  test_whisper.py
tests/snapshots/test_whisper/test_video_transcription_with_timestamps/: transcription.json
